--- a/src/assets/sass/mixin.scss
+++ b/src/assets/sass/mixin.scss
@@ -1,8 +1,8 @@
 // 公共混入
 //定义一个变量和一个mixin
-$baseFontSize: 75;//基于视觉稿横屏尺寸/100得出的基准font-size
-@mixin px2rem($name, $px){
-    #{$name}: $px / $baseFontSize * 1rem;
+$baseFontSize: 133.4; //基于视觉稿横屏尺寸/100得出的基准font-size
+@mixin px2rem($name, $px) {
+  #{$name}: $px / $baseFontSize * 1rem;
 }
 //使用示例：
 // .container {
@@ -10,5 +10,6 @@ $baseFontSize: 75;//基于视觉稿横屏尺寸/100得出的基准font-size
 // }
 
 @mixin boxShandowPx2Rem($arg1, $arg2, $arg3, $color) {
-    box-shadow: $arg1 / $baseFontSize * 1rem  $arg2 / $baseFontSize * 1rem  $arg3 / $baseFontSize * 1rem $color;
+  box-shadow: $arg1 / $baseFontSize * 1rem $arg2 / $baseFontSize * 1rem $arg3 /
+    $baseFontSize * 1rem $color;
 }
